Bug 1565344 - Remove unnecessary OutputStreamManager::mPrincipal. r=jib a=RyanVM

It would cause an assertion failure when OutputStreamManager was released on
main thread. It could be wrapped in an nsMainThreadPtrHandle instead, but that's
exactly what mPrincipalHandle is, so we can use that for both needs.

Differential Revision: https://phabricator.services.mozilla.com/D40789

--HG--
extra : amend_source : 0439142008f60d2fe032f896cbcc41eddc37adc7